# mwm

./: .gitignore  .gitmodules  CMakeLists.txt  DisplayDataChannel.hpp  Geometry.hpp  Log.hpp  Makefile  Manager.cpp  Manager.hpp  README.md  XUtils.hpp  build.sh  log.c  log.h  main.cpp  mwm.cpp  run.sh  wm.c  wm.h  xinitrc
.github/workflows/: build.yml
