CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(xggty)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -DRAPIDJSON_HAS_STDSTRING=1")

# Locate libraries
FIND_LIBRARY(L_MASS libmass.so "../libmass/build")
FIND_PACKAGE(X11 REQUIRED)

set(SOURCES main.cpp)

INCLUDE_DIRECTORIES("../libmass/include")
INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})

ADD_EXECUTABLE(xggty ${SOURCES})


# Link libraries
TARGET_LINK_LIBRARIES(xggty ${L_MASS} ${X11_LIBRARIES})
